<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_bar_color" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/comp_gap_horz"
            android:layout_marginRight="@dimen/comp_gap_horz"
            android:gravity="center_vertical"
            android:text="@string/to"
            android:textColor="@color/button_text_color" />

        <Button
            android:id="@+id/button_select_contact"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/comp_gap_horz"
            android:layout_marginTop="@dimen/comp_gap_horz"
            android:layout_weight="1.0"
            android:background="#30ffffff"
            android:hint="@string/select_a_contact"
            android:textColor="@color/button_text_color" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/comp_gap_horz"
            android:layout_marginRight="@dimen/comp_gap_horz"
            android:background="#00000000"
            android:text="@string/send"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@color/bar_color" >
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/text_content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/input_text_detail"
                android:inputType="textMultiLine"
                android:textColor="@color/button_text_color" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>